packages/typ/tests/fixtures/diagnostics/0667_fcm_local_abstract_wrong_arg_01.ml.expected
File "0667_fcm_local_abstract_wrong_arg_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0667_fcm_local_abstract_wrong_arg_01 is not a valid module name.

File "0667_fcm_local_abstract_wrong_arg_01.ml", line 14, characters 64-68:
14 | let _ = use_alpha (module M_alpha : Id_alpha with type t = int) true
                                                                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
